force-app/main/default/objects/TiposRecurso__c/TiposRecurso__c.object-meta.xml
<CustomObject>
    <label>Tipos de Recurso</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Tipos de Recurso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tipos de Recurso</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>