force-app/main/default/objects/TiposRecurso__c/fields/DescricaoRecurso__c.field-meta.xml
<CustomField>
    <fullName>DescricaoRecurso__c</fullName>
    <label>Descrição do Tipo de Recurso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>