force-app/main/default/objects/TiposRecurso__c/fields/EstruturaProduto__c.field-meta.xml
<CustomField>
    <fullName>EstruturaProduto__c</fullName>
    <formula>RecursoProduto__r.EstruturaProduto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estrutura do produto</label>
    <type>Text</type>
</CustomField>