force-app/main/default/objects/TiposRecurso__c/fields/RecursoProduto__c.field-meta.xml
<CustomField>
    <fullName>RecursoProduto__c</fullName>
    <label>Recursos do Produto</label>
    <referenceTo>RecursosProduto__c</referenceTo>
    <relationshipLabel>Tipos de Recurso</relationshipLabel>
    <relationshipName>ComposicaoProduto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>