force-app/main/default/objects/TiposRecurso__c/fields/Sequencial__c.field-meta.xml
<CustomField>
    <fullName>Sequencial__c</fullName>
    <label>Sequencial Identificador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>