force-app/main/default/objects/TiposRecurso__c/fields/SequencialRecurso__c.field-meta.xml
<CustomField>
    <fullName>SequencialRecurso__c</fullName>
    <formula>RecursoProduto__r.Sequencial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sequencial do Recurso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>