force-app/main/default/objects/TiposRecurso__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sequencial__c</columns>
    <columns>RecursoProduto__c</columns>
    <columns>DescricaoRecurso__c</columns>
    <columns>Ativo__c</columns>
    <columns>ExternalId__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>